--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "erlpack": "discordapp/erlpack",
     "ffmpeg-static": "^4.2.6",
     "glob": "^7.1.6",
+    "json": "^9.0.6",
     "libsodium-wrappers": "^0.7.6",
     "moment": "^2.27.0",
     "ms": "^2.1.2",
