Updated example config

--- a/config.json.example
+++ b/config.json.example
@@ -1,7 +1,7 @@
 {
     "ConfigVersion" : "0.1",
 
-    "Prefix" : "^",
+    "DefaultPrefix" : "^",
     "Token" : "Your-Token-Goes-Here",
 
     "Owners" : ['OwnerIDs']
