Added Twitter package

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ms": "^2.1.2",
     "os": "^0.1.1",
     "path": "^0.12.7",
+    "twitter": "^1.7.1",
     "utf-8-validate": "^5.0.2",
     "util": "^0.12.3",
     "zlib-sync": "^0.1.7"
