--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
-    "eslint": "^7.5.0"
+    "@types/node": "^14.6.1",
+    "eslint": "^7.5.0",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   },
   "scripts": {
-    "start": "node ."
+    "start": "ts-node index.ts"
   }
 }
