--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "afina",
   "version": "0.0.1",
   "description": "Discord Bot",
-  "main": "index.js",
+  "main": "index.ts",
   "author": "MiFU",
   "license": "MIT",
   "dependencies": {
@@ -26,7 +26,6 @@
   },
   "devDependencies": {
     "@types/node": "^14.6.1",
-    "eslint": "^7.5.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
