--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.6.1",
+    "@types/twit": "^2.2.27",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
