--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "zlib-sync": "^0.1.7"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.3",
     "@types/node": "^14.6.1",
     "@types/twit": "^2.2.27",
+    "@types/webpack-env": "^1.15.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
