--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,9 @@
     "esModuleInterop": true,       
     "skipLibCheck": true,        
     "forceConsistentCasingInFileNames": true,
-    "allowJs": true
+    "allowJs": true,
+    "outDir": "dist",
+    "resolveJsonModule": true,
+    "noImplicitAny": false
   }
 }
