--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
+    "@types/ms": "^0.7.31",
     "@types/node": "^14.14.9",
     "@types/twit": "^2.2.27",
     "@types/webpack-env": "^1.15.3",
