--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.0.2"
   },
   "scripts": {
-    "start": "ts-node index.ts"
+    "start": "ts-node index.ts",
+    "debug": "ts-node index.ts --trace-warnings"
   }
 }
