--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "json": "^9.0.6",
     "libsodium-wrappers": "^0.7.6",
     "moment": "^2.27.0",
+    "mongoose": "^5.11.4",
     "ms": "^2.1.2",
     "os": "^0.1.1",
     "path": "^0.12.7",
