--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "esModuleInterop": true,       
     "skipLibCheck": true,        
     "forceConsistentCasingInFileNames": true,
-    "allowJs": true,
+    "allowJs": false,
     "outDir": "dist",
     "resolveJsonModule": true,
     "noImplicitAny": false,
