--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
     "bufferutil": "^4.0.1",
+    "colors": "^1.4.0",
     "discord.js": "^12.5.1",
     "enmap": "^5.4.1",
     "erlpack": "discordapp/erlpack",
