--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@discordjs/opus": "^0.3.2",
     "bufferutil": "^4.0.1",
     "colors": "^1.4.0",
+    "discord-music-player": "^7.0.1",
     "discord.js": "^12.5.1",
     "enmap": "^5.4.1",
     "erlpack": "discordapp/erlpack",
