--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.27.0",
     "mongoose": "^5.11.4",
     "ms": "^2.1.2",
+    "opusscript": "^0.0.8",
     "os": "^0.1.1",
     "path": "^0.12.7",
     "twit": "^2.2.11",
@@ -31,7 +32,7 @@
     "@types/glob": "^7.1.3",
     "@types/ms": "^0.7.31",
     "@types/node": "^14.14.9",
-    "@types/twit": "^2.2.27",
+    "@types/twit": "^2.2.28",
     "@types/webpack-env": "^1.15.3",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
