--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bufferutil": "^4.0.1",
     "colors": "^1.4.0",
     "discord-music-player": "^7.0.1",
-    "discord.js": "^12.5.1",
+    "discord.js": "^13.0.0-dev.652c683da7032a147313b4a8db043be5385e0656",
     "enmap": "^5.4.1",
     "erlpack": "discordapp/erlpack",
     "ffmpeg-static": "^4.2.6",
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@types/glob": "^7.1.3",
     "@types/ms": "^0.7.31",
-    "@types/node": "^14.14.9",
+    "@types/node": "^14.17.1",
     "@types/twit": "^2.2.28",
     "@types/webpack-env": "^1.15.3",
     "ts-node": "^9.0.0",
