--- a/MythoticDiscordBot.csproj
+++ b/MythoticDiscordBot.csproj
@@ -13,6 +13,11 @@
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.1.0" />
     <PackageReference Include="DSharpPlus.Lavalink" Version="4.1.0" />
     <PackageReference Include="DSharpPlus.VoiceNext" Version="4.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Config\config.json" />
   </ItemGroup>
 
 </Project>
