Changes to the main object

--- a/MythoticDiscordBot.csproj
+++ b/MythoticDiscordBot.csproj
@@ -25,4 +25,9 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Events\" />
+    <Folder Include="Commands\" />
+  </ItemGroup>
+
 </Project>
