--- a/MythoticDiscordBot.csproj
+++ b/MythoticDiscordBot.csproj
@@ -15,7 +15,8 @@
     <PackageReference Include="DSharpPlus.SlashCommands" Version="4.2.0-nightly-01038" />
     <PackageReference Include="DSharpPlus.VoiceNext" Version="4.2.0-nightly-01038" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="4.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
