Update BotInfo command.

--- a/Config/config.json.example
+++ b/Config/config.json.example
@@ -3,7 +3,7 @@
 
     "Token" : "Your-Token-Goes-Here",
 
-    "Owners" : ['OwnerIDs']
+    "Owners" : ["OwnerIDs"],
     
     "TwitterAPI": {
         "ApiKey": "TwitterApiKeyHere",
