--- a/MythoticDiscordBot.csproj
+++ b/MythoticDiscordBot.csproj
@@ -17,6 +17,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="4.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+    <PackageReference Include="MongoDB.Bson" Version="2.13.2" />
+    <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.13.2" />
+    <PackageReference Include="MongoDB.Libmongocrypt" Version="1.2.3" />
   </ItemGroup>
 
   <ItemGroup>
