--- a/MythoticDiscordBot.DAL/MythoticDiscordBot.DAL.csproj
+++ b/MythoticDiscordBot.DAL/MythoticDiscordBot.DAL.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-01044" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MythoticDiscordBot.Bot\MythoticDiscordBot.Bot.csproj" />
   </ItemGroup>
 
 </Project>
