--- a/MythoticDiscordBot.Bot/MythoticDiscordBot.Bot.csproj
+++ b/MythoticDiscordBot.Bot/MythoticDiscordBot.Bot.csproj
@@ -171,11 +171,17 @@
     <PackageReference Include="DSharpPlus.VoiceNext" Version="4.2.0-nightly-01044" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
     <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="4.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
     <PackageReference Include="MongoDB.Bson" Version="2.13.2" />
     <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
     <PackageReference Include="MongoDB.Driver.Core" Version="2.13.2" />
     <PackageReference Include="MongoDB.Libmongocrypt" Version="1.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MythoticDiscordBot.DAL\MythoticDiscordBot.DAL.csproj" />
   </ItemGroup>
 
   <ItemGroup>
