--- a/MythoticDiscordBot.DAL.Migrations/MythoticDiscordBot.DAL.Migrations.csproj
+++ b/MythoticDiscordBot.DAL.Migrations/MythoticDiscordBot.DAL.Migrations.csproj
@@ -6,4 +6,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MythoticDiscordBot.DAL\MythoticDiscordBot.DAL.csproj" />
+  </ItemGroup>
+
 </Project>
