--- a/MythoticDiscordBot.Bot/MythoticDiscordBot.Bot.csproj
+++ b/MythoticDiscordBot.Bot/MythoticDiscordBot.Bot.csproj
@@ -185,6 +185,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MythoticDiscordBot.Core\MythoticDiscordBot.Core.csproj" />
     <ProjectReference Include="..\MythoticDiscordBot.DAL.Migrations\MythoticDiscordBot.DAL.Migrations.csproj" />
     <ProjectReference Include="..\MythoticDiscordBot.DAL\MythoticDiscordBot.DAL.csproj" />
   </ItemGroup>
