Edited Entity model to ensure Id was type int

--- a/MythoticDiscordBot.DAL.Migrations/MythoticDiscordBot.DAL.Migrations.csproj
+++ b/MythoticDiscordBot.DAL.Migrations/MythoticDiscordBot.DAL.Migrations.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\MythoticDiscordBot.DAL\MythoticDiscordBot.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
