--- a/MythoticDiscordBot.Bot/MythoticDiscordBot.Bot.csproj
+++ b/MythoticDiscordBot.Bot/MythoticDiscordBot.Bot.csproj
@@ -166,7 +166,7 @@
     <PackageReference Include="DSharpPlus.SlashCommands" Version="4.2.0-nightly-01044" />
     <PackageReference Include="DSharpPlus.VoiceNext" Version="4.2.0-nightly-01044" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting" Version="2.2.7" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="4.0.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Scripting" Version="4.1.0-1.final" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -174,10 +174,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
-    <PackageReference Include="MongoDB.Bson" Version="2.13.2" />
-    <PackageReference Include="MongoDB.Driver" Version="2.13.2" />
-    <PackageReference Include="MongoDB.Driver.Core" Version="2.13.2" />
-    <PackageReference Include="MongoDB.Libmongocrypt" Version="1.3.0" />
   </ItemGroup>
 
   <ItemGroup>
