--- a/MythoticDiscordBot.Bot/MythoticDiscordBot.Bot.csproj
+++ b/MythoticDiscordBot.Bot/MythoticDiscordBot.Bot.csproj
@@ -159,6 +159,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.0.0" />
+    <PackageReference Include="Azure.Identity" Version="1.4.0" />
     <PackageReference Include="DSharpPlus" Version="4.2.0-nightly-01044" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.2.0-nightly-01044" />
     <PackageReference Include="DSharpPlus.Interactivity" Version="4.2.0-nightly-01044" />
