--- a/.gitignore
+++ b/.gitignore
@@ -210,7 +210,7 @@ PublishScripts/
 *.nuget.targets
 
 # Nuget personal access tokens and Credentials
-nuget.config
+#nuget.config
 
 # Microsoft Azure Build Output
 csx/
