--- a/.github/workflows/MythoticDiscordBot.yml
+++ b/.github/workflows/MythoticDiscordBot.yml
@@ -2,7 +2,7 @@ name: Build and deploy .NET Core app to Windows WebApp MythoticDiscordBot
 on:
   push:
     branches:
-    - csharp_rewrite
+    - master
 env:
   AZURE_WEBAPP_NAME: MythoticDiscordBot
   AZURE_WEBAPP_PACKAGE_PATH: MythoticDiscordBot.Bot/publish
